--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@radix-ui/react-slot": "^1.2.4",
         "@radix-ui/react-tabs": "^1.1.13",
         "@tailwindcss/forms": "^0.5.3",
+        "@tailwindcss/postcss": "^4.2.0",
         "@tailwindcss/vite": "^4.0.0",
         "@types/node": "^24.10.1",
         "@types/react": "^19.2.7",
